# VenomRecon

./: README.md  pyproject.toml  requirements.txt
installers/: install.sh  install_external.sh  install_pip.sh
src/venomrecon/: __init__.py  main.py
src/venomrecon/commands/: doctor.py
src/venomrecon/core/: config.py  logger.py  runner.py
src/venomrecon/modules/: discovery.py  intelligence.py  parameters.py  report.py  subdomain.py  takeover.py  vulnerability.py
src/venomrecon/utils/: __init__.py  fileops.py  helpers.py  js_secrets.py  probes.py  secret_verifier.py  shell_replacements.py
